@@ -101,7 +101,6 @@ trustme = URI::Heuristic => qr/^(?:MY_COUNTRY|uf_url|uf_urlstr)$/
 trustme = URI::URL => qr/^(?:address|article|crack|dos_path|encoded822addr|eparams|epath|frag)$/
 trustme = URI::URL => qr/^(?:full_path|groupart|keywords|local_path|mac_path|netloc|newlocal|params|path|path_components|print_on|query|strict|unix_path|url|vms_path)$/
 trustme = URI::WithBase => qr/^(?:can|clone|eq|new_abs)$/
-trustme = URI::_punycode => qr/^(?:adapt|code_point|digit_value|min)$/
 trustme = URI::_query => qr/^(?:equery|query|query_form|query_form_hash|query_keywords|query_param|query_param_append|query_param_delete)$/
 trustme = URI::_segment => qr/^(?:new)$/
 trustme = URI::_userpass => qr/^(?:password|user)$/
